syntax = "proto3";
option go_package = "./interaction-service/proto/comment";
import "douyin-api/proto/user/user.proto";

message Comment {
  int64 id = 1;
  optional pb.User user = 2;
  string content = 3;
  string create_date = 4;
}


message CommentActionRequest {
  string token =1;
  int64 user_id=2;
  int64 video_id = 3;
  int64 action_type = 4;
  optional string comment_text=5;
  optional string comment_id=6;
}

message CommentActionResponse {
  int32 status_code = 1;
  optional string status_msg = 2;
  optional Comment comment = 3;
}


message CommentListRequest {
  string token=1;
  int64 video_id = 2;
}

message CommentListResponse {
  int32 status_code = 1;
  optional string status_msg = 2;
  repeated Comment comment_list = 3;
}

service CommentService {
  rpc CommentAction(CommentActionRequest) returns (CommentActionResponse);
  rpc CommentList(CommentListRequest) returns (CommentListResponse);

}