syntax = "proto3";
option go_package = "./interaction-service/proto/favorite";
import "douyin-api/proto/video/video.proto";

message favorite_action_request {
  int64 user_id = 1; // 用户id
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

message favorite_action_response {
  int32 status_code = 1; // 状态码，200-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message is_favorite_request {
  int64 user_id = 1; // 用户id
  int64 video_id = 2; // 视频id
}

message is_favorite_response {
  int32 status_code = 1; // 状态码，200-成功，其他值-失败
  bool isFavorite = 2; // 是否喜欢结果
}


message favorite_list_request{
  int64 user_id=1;
  string token=2;
}
message favorite_list_response{
  repeated vp.Video video_list=1;
  int32 status_code = 2;
  optional string status_msg = 3;
}

service FavoriteService {
  rpc FavoriteAction (favorite_action_request) returns (favorite_action_response){
  }
  rpc IsFavorite(is_favorite_request) returns (is_favorite_response){
  }
  rpc FavoriteList(favorite_list_request) returns (favorite_list_response){
  }
}